Dependencias firebase añadidas

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# ignorar firebase options (apis)
+firebase_options.dart
