--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^4.17.7
   cloud_firestore: ^4.15.7
   image_picker: ^1.0.8
+  firebase_storage: ^11.6.9
 
 dev_dependencies:
   flutter_test:
